# ApiHub

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.githooks/: pre-commit
.github/actions/push/: action.yml
.github/workflows/: api-contract-push.yml
app/: .env  .env-example  .gitignore  main.py
app/api/: deps.py
app/api/routes/: checks.py  dependencies.py  schemas.py
app/cli/: check.py  diff.py  fetch.py  main.py  output.py  ps.py  push.py
app/core/: cache.py  config.py  exceptions.py  redis.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 71858b82e7e7_add_dependency_and_check.py  7960fe4d835f_add_all_tables.py  acaa4fd992e4_add_service_and_schema.py
app/domain/dto/: base.py  common.py  enums.py  value.py
app/models/: check.py  dependency.py  schemas.py  service.py
app/services/: check_service.py  contract_service.py  dependency_service.py  diff_service.py  html_report.py  schema_service.py
app/static/: app.js  i18n.js  index.html  style.css
app/static/assets/: index-0uBIWDmX.js  index-D_S8m8QP.css
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: AnimatedContent.tsx  AnimatedList.css  AnimatedList.tsx  App.css  App.tsx  FadeContent.tsx  FaultyTerminal.css  FaultyTerminal.tsx  GlareHover.tsx  LineWaves.css  LineWaves.tsx  Particles.css  Particles.tsx  api.ts  types.ts
frontend/src/navigation/: Dock.css  Dock.tsx  NavStyles.css  Pages.tsx  types.ts  utils.tsx
tests/: test_diff_service.py
